k8s-ingress/performance/cafe/app-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: perf-test01
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
  namespace: perf-test01
spec:
  replicas: 3
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: kylinsoong/cafe:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
  namespace: perf-test01
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: coffee
